spring boot ms resilance4j

--- a/ms/springboot_ms_gettingstarted/customerapp2/pom.xml
+++ b/ms/springboot_ms_gettingstarted/customerapp2/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.productapp</groupId>
-	<artifactId>couponapp</artifactId>
+	<artifactId>customerapp2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>couponapp</name>
+	<name>customerapp</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
