--- a/ms/springboot_ms_gettingstarted/couponapp/src/main/resources/application.yml
+++ b/ms/springboot_ms_gettingstarted/couponapp/src/main/resources/application.yml
@@ -5,3 +5,15 @@ server:
   port: 8085
   servlet:
     context-path: /couponapp
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        exclude:
+        - "*"
