--- a/ms/springboot_ms_gettingstarted/orderapp/src/main/resources/application.yml
+++ b/ms/springboot_ms_gettingstarted/orderapp/src/main/resources/application.yml
@@ -5,4 +5,59 @@ server:
 spring:
   application:
     name: order-service
-    
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include:
+#        - "*"
+#  endpoint:
+#    health:
+#      enabled: true
+#      show-details: always
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+resilience4j:
+  circuitbreaker:
+    instances:
+      couponfallback:
+        register-health-indicator: true
+        event-consumer-buffer-size: 10
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-size: 10
+        sliding-window-type: time-based
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
