--- a/ms/springboot_ms_gettingstarted/shippingapp/src/main/resources/application.yml
+++ b/ms/springboot_ms_gettingstarted/shippingapp/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   application:
-    name: product-service
+    name: shipping-service
 server:
-  port: 8082
+  port: 8088
   servlet:
-    context-path: /productapp
+    context-path: /shippingapp
+
 eureka:
   client:
     register-with-eureka: true
